# tv-bench-controller-firmware

./: CMakeLists.txt  LICENSE  README.md  prj.conf  prj_dev.conf  testcase.yaml  west.yml
.github/workflows/: build.yml  test.yml  tests.yml
boards/arm/enya_tv_bench_ctrlr/: Kconfig.board  Kconfig.defconfig  enya_tv_bench_ctrlr.dts  enya_tv_bench_ctrlr.yaml  enya_tv_bench_ctrlr_defconfig  f070rb-bindings.h  ws2812b-bindings.h
cmake/: listSourcesAndIncludes.cmake
scripts/: build.sh  start-shell.sh
src/: main.c
src/appCmd/: appCmd.c  appCmd.h  appInfo.h
src/appInfo/: appInfo.h  appInfoCmd.c
src/appMsg/: appMsg.c  appMsg.h
src/colorManager/: colorManager.c  colorManager.h
src/configurator/: configurator.c  configurator.h
src/ledCtrl/: LedCtrl.c  LedCtrl.h  ledCtrl.c  ledCtrl.h  ledCtrlHw.c  ledCtrlHw.h
src/ledManager/: ledManager.c  ledManager.h
src/messages/: messages.c  messages.h
src/sequencManager/: sequenceManager.c  sequenceManager.h
src/sequenceCommand/: sequenceCommand.c
tests/: test_dummy.c
tests/unit/: CMakeLists.txt  test_dummy.c  testcase.yaml
tests/unit/appMsg/: test_appMsg.c
tests/unit/cmake/: listUnitTestSourcesAndIncludes.cmake
tests/unit/colorManager/: test_colorManager.c
tests/unit/configurator/: test_configurator.c
tests/unit/ledCtrl/: test_ledCtrl.c
tests/unit/ledManager/: test_ledManager.c
tests/unit/messages/: test_messages.c
tests/unit/sequenceCommand/: test_sequenceCommand.c  tets_sequenceCommand.c
tests/unit/sequenceManager/: test_sequencManager.c
